app/assets/css/launcher.css
/* ... */
#authButton:disabled {
    color: rgba(255, 255, 255, 0.75);
    pointer-events: none;
}
#authButton[loading] {
    color: #fff;
}
#authButton:hover,
#authButton:focus {
    text-shadow: 0px 0px 20px #fff;
    outline: none;
}
#authButton:active {
    color: #c7c7c7;
    text-shadow:  0px 0px 20px #c7c7c7;
}
#authSVG {
    -webkit-transform: translate3d(0, 0, 0);
    overflow: visible;
    transform: rotate(90deg);
    margin-left: 20px;
    transition: 0.25s ease;
    width: 20px;
    height: 20px;
}
#authButton:hover #authSVG,
#authButton:focus #authSVG {
    -webkit-filter: drop-shadow(0px 0px 2px #fff);
}
#authButton:active #authSVG .arrowLine {
    stroke: #c7c7c7;
}
#authButton:active #authSVG {
    -webkit-filter: drop-shadow(0px 0px 2px #c7c7c7);
}
#authButton:disabled #authSVG .arrowLine {
    stroke: rgba(255, 255, 255, 0.75);
}

#authButtonContent {
    display: flex;
    align-items: center;
}

#authButton .circle-loader,
#authButton[loading] #authSVG {
    display: none;
}
#authButton[loading] .circle-loader,
#authButton #authSVG {
    display: initial;
}

/* Disclaimer container. */
#authDisclaimer {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

/* Add spacing between auth anchor and disclaimer. */
#authauthSpan {
    margin-bottom: 5px;
}

/* Disclaimer text styles. */
.authDisclaimerText {
    font-size: 7px;
    color: #848484;
    font-weight: bold;
    text-align: center;
}

/* * *
* auth View | Custom Checkbox
* * */

/* Checkbox container. */
#checkmarkContainer {
    display: flex;
    justify-content: flex-end;
    align-items: center;
    position: relative;
    cursor: pointer;
    font-size: 22px;
    -webkit-user-select: none;
}

/* Hide the default checkbox. */
#checkmarkContainer input {
    opacity: 0;
    cursor: pointer;
    position: absolute;
}

/* Create a custom checkbox. */
.authCheckmark {
    position: relative;
    height: 10px;
    width: 10px;
    border: 1px solid #848484;
    border-radius: 1px;
    background: none;
    transition: 0.25s ease;
}
/* On hover and focus, add a grey border color. */
#checkmarkContainer:hover input ~ *,
#checkmarkContainer input:focus ~ * {
    color: #a2a2a2;
    border-color: #a2a2a2;
}
/* On keydown, darken the checkbox a bit. */
#checkmarkContainer input:active ~ *:not(#authRememberText) {
    color: #8d8d8d;
    border-color: #8d8d8d;
}
#checkmarkContainer[disabled] {
    pointer-events: none;
}
/* For checked -> #checkmarkContainer input:checked ~ * */
/* Create the checkmark/indicator (hidden when not checked). */
.authCheckmark:after {
    content: "";
    display: none;
}
/* Show the checkmark when checked. */
#checkmarkContainer input:checked ~ .authCheckmark:after {
    display: block;
}
/* Style the checkmark/indicator. */
#checkmarkContainer .authCheckmark:after {
    position: absolute;
    left: 3.5px;
    top: 0.5px;
    width: 2px;
    height: 6px;
    border: solid #a2a2a2;
    border-width: 0 2px 2px 0;
    transform: rotate(45deg);
}

/*
#auth_filter {
    height: calc(100% - 22px);
    width: 100%;
    z-index: 9000;
    position: absolute;
    filter: blur(8px) contrast(0.9) brightness(1.0);
    background: url('./../images/backgrounds/0.jpg') no-repeat center center fixed;
    transform: scale(1.2);
    background-size: cover;
}
*/

